--- a/bitrix/templates/main/css/screen.css
+++ b/bitrix/templates/main/css/screen.css
@@ -709,6 +709,30 @@ body {
   letter-spacing: 0.0625rem;
   -webkit-filter: brightness(120%);
   filter: brightness(120%); }
+  .title.lines {
+    overflow: hidden; }
+    .title.lines span {
+      display: inline-block;
+      position: relative;
+      z-index: 1;
+      padding-left: 1.5625rem;
+      padding-right: 1.5625rem;
+      background-image: linear-gradient(to left, #f7c956 0%, #f6a000 100%);
+      background-image: var(--color-gradient);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent; }
+      .title.lines span:before, .title.lines span:after {
+        content: '';
+        display: inline-block;
+        height: 1px;
+        background-color: #FFF;
+        width: 100vw;
+        position: absolute;
+        top: 51%; }
+      .title.lines span:before {
+        right: 100%; }
+      .title.lines span:after {
+        left: 100%; }
 
 .text {
   font-size: 1.25rem;
@@ -794,12 +818,51 @@ body {
   .header .text, .form .text {
     text-align: center; }
 
-.form .title {
-  margin-top: 0.625rem;
-  margin-bottom: 0.9375rem; }
-
-.form .text {
-  margin-bottom: 2.5rem; }
+.form {
+  position: relative; }
+  .form .title {
+    margin-top: 0.625rem;
+    margin-bottom: 0.9375rem; }
+  .form .text {
+    margin-bottom: 2.5rem; }
+  .form:not(.complete) .form-succes {
+    opacity: 0;
+    visibility: hidden;
+    -webkit-transform: translateY(30px);
+    -ms-transform: translateY(30px);
+    transform: translateY(30px); }
+  .form-succes {
+    background-color: #1a1a1a;
+    background-color: var(--color-bodybg);
+    -webkit-transition: opacity .3s, visibility .3s, -webkit-transform .3s;
+    transition: opacity .3s, visibility .3s, -webkit-transform .3s;
+    transition: transform .3s, opacity .3s, visibility .3s;
+    transition: transform .3s, opacity .3s, visibility .3s, -webkit-transform .3s;
+    border-radius: 4px;
+    position: absolute;
+    bottom: 80px;
+    left: 0;
+    right: 0;
+    border: 1px solid #fff; }
+    .form-succes-inner {
+      width: 100%;
+      height: 100%;
+      text-align: center;
+      font-size: 0;
+      padding-left: 1.25rem;
+      padding-right: 1.25rem; }
+      .form-succes-inner:before {
+        content: "";
+        display: inline-block;
+        vertical-align: middle;
+        width: 0;
+        height: 100%; }
+      .form-succes-inner .text {
+        display: inline-block;
+        margin: 0;
+        vertical-align: middle;
+        padding-top: 10px;
+        padding-bottom: 10px; }
 
 .input-item {
   display: block;
@@ -843,9 +906,29 @@ body {
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
   background-color: rgba(18, 18, 18, 0.8); }
+  .input-main::-webkit-input-placeholder {
+    color: transparent; }
+  .input-main::-moz-placeholder {
+    color: transparent; }
+  .input-main:-ms-input-placeholder {
+    color: transparent; }
+  .input-main::placeholder {
+    color: transparent; }
   .input-main:focus {
     background-color: #000000;
     background-color: var(--color-black); }
+    .input-main:focus::-webkit-input-placeholder {
+      color: #fff;
+      color: var(--color-white); }
+    .input-main:focus::-moz-placeholder {
+      color: #fff;
+      color: var(--color-white); }
+    .input-main:focus:-ms-input-placeholder {
+      color: #fff;
+      color: var(--color-white); }
+    .input-main:focus::placeholder {
+      color: #fff;
+      color: var(--color-white); }
     .input-main:focus ~ .input-line .input-line-inner:before {
       -webkit-transform: scale(1);
       -ms-transform: scale(1);
@@ -1122,6 +1205,174 @@ body {
       top: 0; }
   .slider-counter .arrow {
     fill: #fff !important; }
+
+.block-border {
+  border: 1px solid #fff;
+  border: 1px solid var(--color-white);
+  border-top-color: transparent;
+  text-align: center; }
+  .block-border .title {
+    margin-top: -1.375rem; }
+  .block-border .btn {
+    margin-bottom: 7vh;
+    width: 100%;
+    max-width: 19.375rem; }
+  .block-border .list-wrap {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-flow: row nowrap;
+    -ms-flex-flow: row nowrap;
+    flex-flow: row nowrap;
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    -webkit-box-align: start;
+    -webkit-align-items: flex-start;
+    -ms-flex-align: start;
+    align-items: flex-start; }
+  .block-border ul {
+    display: block;
+    text-align: center;
+    margin-bottom: 0.625rem;
+    padding-left: 1.5625rem;
+    padding-right: 1.5625rem;
+    margin: 2.5rem auto 3.125rem;
+    max-width: 28.125rem; }
+    .block-border ul li {
+      text-align: left;
+      position: relative;
+      font-size: 1.25rem;
+      line-height: 1.5;
+      padding-left: 1.25rem; }
+      .block-border ul li:before {
+        content: '';
+        display: inline-block;
+        width: 0.375rem;
+        height: 0.375rem;
+        border-radius: 50%;
+        border: 1.5px solid #f7a80d;
+        position: absolute;
+        left: 0;
+        top: 0.5rem; }
+
+.footer-content .text {
+  text-align: center;
+  margin: 1.25rem auto;
+  margin-bottom: 12vh;
+  max-width: 43.75rem; }
+
+.footer-footer-content {
+  text-align: center;
+  margin-top: 8vh;
+  margin-bottom: 3vh; }
+  .footer-footer-content .title {
+    margin-bottom: 2vh; }
+  .footer-footer-content a {
+    display: inline-block;
+    color: #faba2a;
+    position: relative;
+    font-size: 1.25rem;
+    margin-top: 1vh; }
+    .footer-footer-content a:before {
+      content: '';
+      display: inline-block;
+      height: 1px;
+      background-color: #faba2a;
+      -webkit-transition: width .3s;
+      transition: width .3s;
+      width: 100%;
+      left: 0;
+      right: 0;
+      position: absolute;
+      bottom: -1px; }
+    .footer-footer-content a:hover:before {
+      width: 0;
+      left: auto;
+      right: 0; }
+
+.features-wrap {
+  margin-top: 6vh;
+  font-size: 0;
+  margin-right: -6.25rem;
+  counter-reset: num; }
+  .features-wrap .textblock {
+    counter-increment: num;
+    position: relative; }
+    .features-wrap .textblock:before {
+      content: counter(num) ".";
+      font-size: 1.25rem;
+      color: #fff;
+      color: var(--color-white);
+      position: absolute;
+      top: 0;
+      left: 0; }
+
+.features-item {
+  display: inline-block;
+  vertical-align: top;
+  width: 50%;
+  padding-right: 6.25rem;
+  margin-bottom: 11.5vh;
+  padding-left: 2.125rem; }
+  .features-item:first-child {
+    -webkit-transition-delay: .1s;
+    transition-delay: .1s; }
+  .features-item:nth-child(2) {
+    -webkit-transition-delay: .25s;
+    transition-delay: .25s; }
+  .features-item:nth-child(3) {
+    -webkit-transition-delay: .40s;
+    transition-delay: .40s; }
+  .features-item:nth-child(4) {
+    -webkit-transition-delay: .55s;
+    transition-delay: .55s; }
+  .features-item .text {
+    letter-spacing: 0.025rem;
+    font-weight: 300; }
+    .features-item .text span {
+      color: #faba2a; }
+    .features-item .text.sm {
+      font-size: 0.9375rem;
+      color: gainsboro;
+      line-height: 1.733;
+      margin-top: 1.5625rem; }
+  .features-item img {
+    display: block;
+    max-width: 20rem;
+    -webkit-box-shadow: -17px 17px 50px 0px rgba(0, 0, 0, 0.3);
+    box-shadow: -17px 17px 50px 0px rgba(0, 0, 0, 0.3); }
+  .features-item .feat-item {
+    display: inline-block;
+    vertical-align: top;
+    width: 33.33%;
+    margin-top: 1.875rem; }
+    .features-item .feat-item-persent {
+      font-size: 2.8125rem;
+      color: #faba2a; }
+
+.hr {
+  display: block;
+  margin-top: 2vh;
+  height: 2px; }
+
+.footer .header {
+  margin-top: -1.125rem; }
+
+.anim-cont {
+  -webkit-transition: opacity .5s, -webkit-transform .5s;
+  transition: opacity .5s, -webkit-transform .5s;
+  transition: transform .5s, opacity .5s;
+  transition: transform .5s, opacity .5s, -webkit-transform .5s; }
+  .anim-cont:not(.active) {
+    -webkit-transform: translateY(50px);
+    -ms-transform: translateY(50px);
+    transform: translateY(50px);
+    opacity: 0; }
   @media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
 
   * {
@@ -1147,7 +1398,35 @@ body {
 
   .slider-counter {
     margin-top: 1.5625rem; } }
+  @media only screen and (max-width: 900px) {
+
+  .features-item .feat-item {
+    width: 50%; } }
+  @media only screen and (max-width: 800px) {
+
+  .features-item {
+    width: 100%; }
+
+  .features-item:not(.textblock) {
+    padding-left: 0; }
+
+  .features-item img {
+    max-width: 23.75rem;
+    margin: 0 auto; }
+
+  .features-item .feat-item {
+    width: 33.33%; } }
   @media only screen and (max-width: 600px) {
+
+  .title {
+    font-size: 1.75rem; }
+
+  .title.lines span {
+    padding-left: 0.9375rem;
+    padding-right: 0.9375rem; }
+
+  .text {
+    font-size: 1.0625rem; }
 
   .input-item {
     margin-bottom: 1.875rem; }
@@ -1157,12 +1436,59 @@ body {
     right: 0.5rem;
     top: 0.5625rem; }
 
+  .page-head-arrd {
+    display: none; }
+
   .slider-wrap {
     margin: 0 -1.25rem; }
 
   .slider-wrap .flickity-prev-next-button {
     width: 2.8125rem;
-    height: 2.8125rem; } }
+    height: 2.8125rem; }
+
+  .slider-counter .previous {
+    right: 57%; }
+
+  .slider-counter .next {
+    left: 56%; }
+
+  .block-border {
+    margin: 0 -0.625rem; }
+
+  .block-border .list-wrap {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-flow: row wrap;
+    -ms-flex-flow: row wrap;
+    flex-flow: row wrap;
+    margin: 2.1875rem 0; }
+
+  .block-border ul {
+    width: 100%;
+    margin: 0;
+    display: block;
+    padding-left: 0.9375rem;
+    padding-right: 0.9375rem; }
+
+  .block-border ul li {
+    margin: 0.3125rem 0;
+    font-size: 1rem; }
+
+  .features-wrap .textblock:before {
+    font-size: 1.0625rem; }
+
+  .features-item {
+    padding-left: 1.5625rem; }
+
+  .features-item .feat-item .text {
+    font-size: 0.9375rem; }
+
+  .features-item .feat-item-persent {
+    font-size: 2.1875rem; } }
+  @media only screen and (max-width: 500px) {
+
+  .features-item img {
+    max-width: 100%; } }
   @media print, screen and (min-width: 64em) {
 
   .row .row {
