--- a/src/pug/_layout.pug
+++ b/src/pug/_layout.pug
@@ -7,8 +7,15 @@ html
     meta(charset="utf-8")
     block title
       title Jade Layout Template
-    meta(name="viewport" content="width=device-width,initial-scale=1,user-scalable=no")
-    meta(content="IE=Edge" http-equiv="X-UA-Compatible")
+    meta(name="viewport" content="width=device-width, initial-scale=1")
+    meta(name="format-detection" content="telephone=no")
+    meta(content='True' name='HandheldFriendly')
+    meta(http-equiv='X-UA-Compatible', content='IE=edge')
+    meta(name='theme-color', content='#1a1a1a')
+    meta(name="apple-mobile-web-app-status-bar-style" content="#1a1a1a")
+    meta(name='format-detection', content='telephone=no')
+    meta(name='format-detection', content='address=no')
+    meta(name="msapplication-TileColor", content="#1a1a1a")
     link(rel="stylesheet" media="all" href="css/screen.min.css")
   body
     script(type="text/javascript").
