--- a/src/pug/card.pug
+++ b/src/pug/card.pug
@@ -5,12 +5,12 @@ block title
 	- var _name = "index"
 	- var currentPage = "index"
 block content
-	.wrapper.page-header
+	.wrapper.footer
 		.page__bg
-			.page__bg-inner(style='background-image: url(/img/bgheader.jpg)')
+			.page__bg-inner(style='background-image: url(/img/bgfooter.png);')
 		.box
 			.content
-				.header
+				a(href="/").header
 					svg(xmlns='http://www.w3.org/2000/svg', xmlns:xlink='http://www.w3.org/1999/xlink', viewbox='0 0 119.4 38.7')
 						defs
 							path#a(d='M26.2 2l-3.9 3.9V2h-.7v5.3h.1l3.8-3.9v3.9h.7V2zm3.4 0l-2.4 5.3h.8l1.8-3.8 1.8 3.8h.7L29.8 2h-.2zm4.3 2.7h.6c.5 0 .8 0 1 .1.2.1.3.2.4.4.1.2.1.4.1.5 0 .6-.5 1-1.4 1h-.8v-2zM33.2 2v5.3H35c.6 0 1.1-.2 1.4-.5.3-.3.5-.7.5-1.1 0-.4-.1-.7-.3-1-.2-.3-.5-.5-.8-.5-.3-.1-.7-.1-1.2-.1H34V2h-.8zm7 1.1l1.5 3.6h-3l1.5-3.6zM40 2l-2 4.7h-.6V8h.6v-.7h4.4V8h.6V6.7h-.6l-2-4.7H40zm8.5 0l-3.9 3.9V2h-.7v5.3h.1l3.8-3.9v3.9h.7V2zM51 4.3c-.1 0-.3-.1-.4-.3-.1-.1-.2-.3-.2-.5s0-.4.1-.5c.1-.1.2-.2.4-.3.2-.1.4-.1.9-.1h.5v1.7h-.5c-.4.1-.7.1-.8 0m.3-2.3c-.5 0-.8.1-1.1.4-.3.3-.4.6-.4 1.1 0 .4.1.7.4.9.2.3.6.4 1 .5l-1.6 2.4h.7L51.8 5h.5v2.4h.7V2h-1.7zm26.2 0l-2.1 4.1L73.2 2H73l-1.8 5.3h.8l1.3-3.9 2 3.9h.1l2-3.9 1.3 3.9h.7L77.7 2h-.2zm11.4 0l-2.4 5.3h.7L89 3.5l1.8 3.8h.7L89 2h-.1zm4.2 2.7h.6c.5 0 .8 0 1 .1.2.1.3.2.4.4.1.2.2.4.2.5 0 .6-.5 1-1.4 1h-.8v-2zM92.4 2v5.3h1.8c.6 0 1.1-.2 1.4-.5.3-.3.4-.6.4-1.1 0-.4-.1-.7-.3-1-.2-.3-.5-.5-.8-.5-.3-.1-.7-.1-1.2-.1h-.6V2h-.7zM66.7 6.5c-.3-.2-.6-.4-.8-.8-.2-.3-.3-.7-.3-1.1 0-.6.2-1.1.6-1.5.4-.4.9-.6 1.5-.6s1 .2 1.4.6c.4.4.6.9.6 1.5 0 .4-.1.7-.3 1.1-.2.3-.4.6-.7.8-.3.2-.7.3-1 .3-.3 0-.7-.1-1-.3m-1-3.7c-.5.5-.7 1.2-.7 1.9s.3 1.4.8 1.9 1.2.8 2 .8 1.5-.3 2-.8.8-1.2.8-1.9-.2-1.4-.7-1.9c-.5-.6-1.2-.9-2-.9-1 0-1.6.3-2.2.9m15.9.2c.4-.3.8-.4 1.4-.4.3 0 .6.1.9.2.3.1.5.3.7.5.2.2.3.5.4.9h-4c.1-.5.3-.9.6-1.2m-.7-.1c-.4.5-.6 1.1-.6 1.8s.2 1.3.7 1.9 1.2.8 2 .8c.4 0 .7-.1 1-.2.3-.1.6-.3.8-.5.2-.2.5-.5.7-.9l-.6-.3c-.2.3-.4.6-.6.7-.2.2-.4.3-.6.4-.3.1-.5.1-.8.1-.6 0-1-.2-1.4-.6-.4-.4-.6-.9-.6-1.5h4.8c0-.7-.2-1.3-.6-1.8-.5-.7-1.3-1-2.2-1-.8.1-1.5.4-2 1.1m17.3.1c.4-.3.8-.5 1.3-.5.3 0 .6.1.9.2.3.1.5.3.7.5.2.2.3.5.4.9h-4c.3-.4.5-.8.7-1.1m-.7-.1c-.4.5-.6 1.1-.6 1.8s.2 1.3.7 1.9c.5.6 1.2.8 2 .8.4 0 .7-.1 1-.2.3-.1.6-.3.8-.5.2-.2.5-.5.7-.9l-.6-.3c-.2.3-.4.6-.6.7-.2.2-.4.3-.7.4-.3.1-.5.1-.8.1-.6 0-1-.2-1.4-.6-.4-.4-.6-.9-.6-1.5h4.8c0-.7-.2-1.3-.6-1.8-.5-.7-1.3-1-2.2-1-.7.1-1.4.4-1.9 1.1M17.1.2v7.1h.7V.9h2.9V.2h-3.6zM60.8 0c-1.1 0-2 .4-2.8 1.1-.7.7-1 1.6-1 2.6s.3 1.8.9 2.5c.7.8 1.7 1.2 3 1.2.7 0 1.2-.1 1.8-.4.5-.2 1-.6 1.3-1.1l-.6-.4c-.7.8-1.5 1.2-2.5 1.2-.9 0-1.7-.3-2.3-.9-.6-.6-.9-1.3-.9-2.2 0-.6.1-1.1.4-1.6.3-.5.6-.8 1.1-1.1.5-.3 1-.4 1.6-.4.5 0 1 .1 1.4.3.4.2.8.5 1.1.9l.6-.4c-.3-.5-.8-.8-1.3-1.1-.5-.1-1.1-.2-1.8-.2z')
@@ -37,94 +37,29 @@ block content
 						path(fill='#AFAFAF', fill-rule='evenodd', d='M66.8 29.8c-.7.4-1.3.7-2 1-.7.3-1.4.6-2.1.8-.7.2-1.4.4-2.1.5-.7.1-1.4.1-2.2 0-.7 0-1.4-.2-2-.4-.6-.2-1.2-.6-1.8-1-.5-.4-1-1-1.3-1.6-.2-.3-.3-.6-.5-1-.1-.3-.2-.7-.3-1 0 .4 0 .7.1 1.1.1.4.2.7.3 1.1.1.3.3.7.5 1 .2.3.5.6.7.9.3.3.6.5.9.7.3.2.7.4 1 .5.7.3 1.5.5 2.2.5.4 0 .8.1 1.2 0h.6c.2 0 .4 0 .6-.1.2 0 .4-.1.6-.1.1 0 .2 0 .3-.1.1 0 .2 0 .3-.1.2-.1.4-.1.6-.2.2-.1.4-.1.5-.2.4-.1.7-.3 1-.5.3-.2.7-.4 1-.6l.9-.6c.1-.1.2-.1.2-.2.1-.1.2-.1.2-.2.4 0 .5-.1.6-.2', clip-path='url(#h)', clip-rule='evenodd')
 						path(fill='#EDCF6E', fill-rule='evenodd', d='M59.7 31.4h-.5c-.2 0-.3-.1-.5-.1-.3-.1-.7-.2-1-.3-.3-.1-.6-.3-.9-.4-.3-.2-.6-.4-.8-.6-.2-.2-.5-.4-.6-.7-.1-.1-.2-.3-.3-.4 0-.1-.1-.1-.1-.2s-.1-.1-.1-.2l-.3-.9c0-.2-.1-.3-.1-.5v-1.4c0-.2 0-.3.1-.5 0-.2.1-.3.1-.5 0-.1 0-.2.1-.2 0-.1.1-.1.1-.2.1-.1.1-.3.2-.4.2-.3.4-.5.6-.8.1-.1.2-.2.4-.3.1-.1.3-.2.4-.3.3-.2.6-.4.9-.5.3-.2.6-.3.9-.4.2-.1.3-.1.5-.2.1 0 .2 0 .3-.1h.2-1.1c-.4 0-.7.1-1.1.2-.4.1-.7.3-1 .4-.2.1-.3.2-.5.3-.2.1-.3.2-.5.3l-.4.4-.2.2c-.1.1-.1.2-.2.2-.1.2-.2.3-.3.5 0 .1-.1.2-.1.3 0 .1-.1.2-.1.3-.1.2-.1.4-.2.6 0 .2-.1.4-.1.6 0 .2 0 .4-.1.6v1.1c0 .2.1.4.1.6.1.4.2.7.4 1.1 0 .1.1.2.1.3 0 .1.1.2.2.3.1.2.2.3.4.5.3.3.5.6.9.8.2.1.3.2.5.3.2.1.3.2.5.2.4.1.7.2 1.1.3.4.1.7.1 1.1.1h.9c0-.4.1-.4.1-.4', clip-path='url(#h)', clip-rule='evenodd')
 						path(fill='#D7D7D7', fill-rule='evenodd', d='M0 26.2h45.9v.4H0zm73.5 0h45.9v.4H73.5z', clip-path='url(#h)', clip-rule='evenodd')
-				form.js-validate.form.has-validation-callback(action='/').anim-cont
-					.title Хотите клубную карту?
-					.text Заполните анкетные данные и мы вам перезвоним
-					.input-item
-						.input-wrapper
-							input#nameInp.input-main.error(type='text', name='name', data-validation='length', data-validation-length='min10', data-validation-error-msg='Поле заполнено неправильно', data-validation-has-keyup-event='true')
-							label.input-label(for='#nameInp') ФИО
-							.input-line
-								.input-line-inner
-					.input-item
-						.input-wrapper
-							input#birth.input-main.error(type='text', name='birth', data-validation='length', data-validation-error-msg='Поле заполнено неправильно', data-validation-length='min10', data-validation-has-keyup-event='true', placeholder='ДД/ММ/ГГГГ')
-							label.input-label(for='#birth') Дата рождения
-							.input-line
-								.input-line-inner
-					.input-item
-						.input-wrapper
-							input#mailInp.input-main.error(type='email', name='email', data-validation='email required', data-validation-error-msg='Поле заполнено неправильно', data-validation-has-keyup-event='true')
-							label.input-label(for='#mailInp') Email 
-							.input-line
-								.input-line-inner
-					.input-item
-						.input-wrapper
-							input#telInp.input-main.error(type='tel', name='tel', data-validation='custom', data-validation-regexp='^[-0-9()+ ]+$', data-validation-error-msg='Поле заполнено неправильно', data-validation-has-keyup-event='true')
-							label.input-label(for='#telInp') Телефон  
-							.input-line
-								.input-line-inner
-					.input-item
-						.input-wrapper
-							.select-u-item
-								label.input_label
-									span.input_main
-										input.input-real(type='checkbox', name='rules', value='y')
-										span.input-checked
-									span.input-text Получать информацию о мероприятиях и акциях Клуба Сомелье
-					.form-succes
-						.form-succes-inner
-							.text Cпасибо за вашу заявку, мы свяжемся с вами в ближейшее время
-					button.btn(type='submit')
-						span Отправить заявку
-
-		.page-head-arrd
-			svg.icon.icon-drop
-				use(xlink:href='#arrow', xmlns:xlink='http://www.w3.org/1999/xlink')
-	.wrapper.about
-		.page__bg
-			.page__bg-inner(style='background-image: url(/img/logot.png);')
-		.box
-			.content
-				.about-content.anim-cont
-					.title Гильдия Сомелье это:
-					.text
-						| Сообщество, объединяющее любителей вина и других алкогольных напитков. На данный момент «Гильдия Сомелье» сотрудничает с сетью магазинов «ВИНО». Мы постоянно работаем над привлечением новых партнеров к программе гильдии.
-					.slider-container.anim-cont
-						.slider-wrap
-							.slider-inner.js-slider
-								.slider-element
-									.slider-element-inner(style='background-image: url("img/1.jpg");')
-								.slider-element
-									.slider-element-inner(style='background-image: url("img/1.jpg");')
-										// iframe(width='560', height='315', src='https://www.youtube.com/embed/UgsS3nhRRzQ', frameborder='0', allowfullscreen='')
-								.slider-element
-									.slider-element-inner(style='background-image: url("img/1.jpg"); ')
-						.slider-counter
-							.carousel-status
-	.wrapper.footer
-		.page__bg
-			.page__bg-inner(style='background-image: url(/img/bgfooter.png);')
-		.box
-			.content
-				.footer-content.anim-cont
-					.title.lines
-						span Наши цели
-					.text
-						| Данное общество было создано во имя развития культуры пития; Мы стараемся предоставить членам нашего клуба максимум возможностей для развития и образования в алкогольной культуре; Мы любим и уважаем алкоголь, нашей целью является вызвать уважение к нему у каждого.
-					.block-border.anim-cont
-						.title.lines
-							span Вступив в гильдию Сомелье вы получаете:
-						.list-wrap
-							ul
-								li Профессиональное общение с сомелье и любителями вина;
-								li Возможность участия в закрытых дегустациях;
-								li Возможность участия в мастер-классах;
-							ul
-								li Особые условия покупки алкоголя в магазинах наших партнеров;
-								li Материал для самообразования по алкогольной тематике.
-						a.btn(href='/card.html')
-							span Подробнее о достоинствах карты
+				.features-wrap
+					.features-item.anim-cont
+						img(src="img/card.png", alt="")
+					.features-item.textblock.anim-cont
+						.text Карта является накопительной. В зависимости от суммы накоплений держатели карт могут получить следующие скидки:
+						.feat-item
+							.feat-item-persent 2%
+							.text От 20 руб.
+						.feat-item
+							.feat-item-persent 5%
+							.text От 250 руб.
+						.feat-item
+							.feat-item-persent 7%
+							.text От 1000 руб.
+					.features-item.textblock.anim-cont
+						.text ДНИ РОЖДЕНИЯ: В период 10 дней до и 10 дней после дня рождения, все держатели карт «Клуб Сомелье» получают скидку 
+							span 10 %
+						.text.sm Скидкой можно воспользоваться только в указанный период и только один раз. Данная скидка не суммируется с текущей скидкой по карте. Необходимым условием получения скидки являются корректно заполненные анкетные данные.
+					.features-item.textblock.anim-cont
+						.text СВАДЬБЫ: В период 10 дней до и 10 дней после регистрации брака, все держатели карт «Клуб Сомелье» получают скидку 
+							span 12 % 
+						.text.sm Скидкой можно воспользоваться только в указанный период и только один раз. Обязательным условием является наличие копии заявления о регистрации брака, либо копии свидетельства о регистрации брака  на фамилию держателя карты. Данная скидка не суммируется с текущей скидкой по карте.
+				hr.hr
 				.footer-footer-content.anim-cont
 					.title У вас остались вопросы?
 					.text Вы всегда можете задать их по электронной почте:
