--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -37,30 +37,30 @@ block content
 						path(fill='#AFAFAF', fill-rule='evenodd', d='M66.8 29.8c-.7.4-1.3.7-2 1-.7.3-1.4.6-2.1.8-.7.2-1.4.4-2.1.5-.7.1-1.4.1-2.2 0-.7 0-1.4-.2-2-.4-.6-.2-1.2-.6-1.8-1-.5-.4-1-1-1.3-1.6-.2-.3-.3-.6-.5-1-.1-.3-.2-.7-.3-1 0 .4 0 .7.1 1.1.1.4.2.7.3 1.1.1.3.3.7.5 1 .2.3.5.6.7.9.3.3.6.5.9.7.3.2.7.4 1 .5.7.3 1.5.5 2.2.5.4 0 .8.1 1.2 0h.6c.2 0 .4 0 .6-.1.2 0 .4-.1.6-.1.1 0 .2 0 .3-.1.1 0 .2 0 .3-.1.2-.1.4-.1.6-.2.2-.1.4-.1.5-.2.4-.1.7-.3 1-.5.3-.2.7-.4 1-.6l.9-.6c.1-.1.2-.1.2-.2.1-.1.2-.1.2-.2.4 0 .5-.1.6-.2', clip-path='url(#h)', clip-rule='evenodd')
 						path(fill='#EDCF6E', fill-rule='evenodd', d='M59.7 31.4h-.5c-.2 0-.3-.1-.5-.1-.3-.1-.7-.2-1-.3-.3-.1-.6-.3-.9-.4-.3-.2-.6-.4-.8-.6-.2-.2-.5-.4-.6-.7-.1-.1-.2-.3-.3-.4 0-.1-.1-.1-.1-.2s-.1-.1-.1-.2l-.3-.9c0-.2-.1-.3-.1-.5v-1.4c0-.2 0-.3.1-.5 0-.2.1-.3.1-.5 0-.1 0-.2.1-.2 0-.1.1-.1.1-.2.1-.1.1-.3.2-.4.2-.3.4-.5.6-.8.1-.1.2-.2.4-.3.1-.1.3-.2.4-.3.3-.2.6-.4.9-.5.3-.2.6-.3.9-.4.2-.1.3-.1.5-.2.1 0 .2 0 .3-.1h.2-1.1c-.4 0-.7.1-1.1.2-.4.1-.7.3-1 .4-.2.1-.3.2-.5.3-.2.1-.3.2-.5.3l-.4.4-.2.2c-.1.1-.1.2-.2.2-.1.2-.2.3-.3.5 0 .1-.1.2-.1.3 0 .1-.1.2-.1.3-.1.2-.1.4-.2.6 0 .2-.1.4-.1.6 0 .2 0 .4-.1.6v1.1c0 .2.1.4.1.6.1.4.2.7.4 1.1 0 .1.1.2.1.3 0 .1.1.2.2.3.1.2.2.3.4.5.3.3.5.6.9.8.2.1.3.2.5.3.2.1.3.2.5.2.4.1.7.2 1.1.3.4.1.7.1 1.1.1h.9c0-.4.1-.4.1-.4', clip-path='url(#h)', clip-rule='evenodd')
 						path(fill='#D7D7D7', fill-rule='evenodd', d='M0 26.2h45.9v.4H0zm73.5 0h45.9v.4H73.5z', clip-path='url(#h)', clip-rule='evenodd')
-				form.js-validate.form.has-validation-callback(action='/').anim-cont
+				form.js-validate.form(action='/').anim-cont
 					.title Хотите клубную карту?
 					.text Заполните анкетные данные и мы вам перезвоним
 					.input-item
 						.input-wrapper
-							input#nameInp.input-main.error(type='text', name='name', data-validation='length', data-validation-length='min10', data-validation-error-msg='Поле заполнено неправильно', data-validation-has-keyup-event='true')
+							input#nameInp.input-main(type='text', name='name', data-validation='length', data-validation-length='min10', data-validation-error-msg='Поле заполнено неправильно', data-validation-has-keyup-event='true')
 							label.input-label(for='#nameInp') ФИО
 							.input-line
 								.input-line-inner
 					.input-item
 						.input-wrapper
-							input#birth.input-main.error(type='text', name='birth', data-validation='length', data-validation-error-msg='Поле заполнено неправильно', data-validation-length='min10', data-validation-has-keyup-event='true', placeholder='ДД/ММ/ГГГГ')
+							input#birth.input-main(type='tel', name='birth', data-validation='custom', data-validation-error-msg='Поле заполнено неправильно',data-validation-regexp="^[-0-9()+/ ]+$" ,data-validation-has-keyup-event='true', placeholder='ДД/ММ/ГГГГ')
 							label.input-label(for='#birth') Дата рождения
 							.input-line
 								.input-line-inner
 					.input-item
 						.input-wrapper
-							input#mailInp.input-main.error(type='email', name='email', data-validation='email required', data-validation-error-msg='Поле заполнено неправильно', data-validation-has-keyup-event='true')
+							input#mailInp.input-main(type='email', name='email', data-validation='email required', data-validation-error-msg='Поле заполнено неправильно', data-validation-has-keyup-event='true')
 							label.input-label(for='#mailInp') Email 
 							.input-line
 								.input-line-inner
 					.input-item
 						.input-wrapper
-							input#telInp.input-main.error(type='tel', name='tel', data-validation='custom', data-validation-regexp='^[-0-9()+ ]+$', data-validation-error-msg='Поле заполнено неправильно', data-validation-has-keyup-event='true')
+							input#telInp.input-main(type='tel', name='tel', data-validation='custom', data-validation-regexp='^[-0-9()+ ]+$', data-validation-error-msg='Поле заполнено неправильно', data-validation-has-keyup-event='true')
 							label.input-label(for='#telInp') Телефон  
 							.input-line
 								.input-line-inner
