--- a/bitrix/templates/main/card.html
+++ b/bitrix/templates/main/card.html
@@ -21,7 +21,7 @@
     <div class="root">
       <div class="wrapper footer">
         <div class="page__bg">
-          <div class="page__bg-inner" style="background-image: url(/img/bgfooter.png);"></div>
+          <div class="page__bg-inner" style="background-image: url(img/bgfooter.png);"></div>
         </div>
         <div class="box">
           <div class="content"><a class="header" href="/">
@@ -85,6 +85,7 @@
                 <div class="text">СВАДЬБЫ: В период 10 дней до и 10 дней после регистрации брака, все держатели карт «Клуб Сомелье» получают скидку <span>12 % </span></div>
                 <div class="text sm">Скидкой можно воспользоваться только в указанный период и только один раз. Обязательным условием является наличие копии заявления о регистрации брака, либо копии свидетельства о регистрации брака  на фамилию держателя карты. Данная скидка не суммируется с текущей скидкой по карте.</div>
               </div>
+              <div class="features-item w100p"><a class="btn" href="/"><span>Заполнить анкетные данные</span></a></div>
             </div>
             <hr class="hr">
             <div class="footer-footer-content anim-cont">
