--- a/src/pug/card.pug
+++ b/src/pug/card.pug
@@ -7,7 +7,7 @@ block title
 block content
 	.wrapper.footer
 		.page__bg
-			.page__bg-inner(style='background-image: url(/img/bgfooter.png);')
+			.page__bg-inner(style='background-image: url(img/bgfooter.png);')
 		.box
 			.content
 				a(href="/").header
@@ -59,6 +59,9 @@ block content
 						.text СВАДЬБЫ: В период 10 дней до и 10 дней после регистрации брака, все держатели карт «Клуб Сомелье» получают скидку 
 							span 12 % 
 						.text.sm Скидкой можно воспользоваться только в указанный период и только один раз. Обязательным условием является наличие копии заявления о регистрации брака, либо копии свидетельства о регистрации брака  на фамилию держателя карты. Данная скидка не суммируется с текущей скидкой по карте.
+					.features-item.w100p
+						a.btn(href='/')
+							span Заполнить анкетные данные
 				hr.hr
 				.footer-footer-content.anim-cont
 					.title У вас остались вопросы?
